WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195072
REGRESSION: Crash beneath ResourceLoadObserver::logSubresourceLoading
https://bugs.webkit.org/show_bug.cgi?id=195072
Summary
REGRESSION: Crash beneath ResourceLoadObserver::logSubresourceLoading
Brent Fulgham
Reported
2019-02-26 15:23:30 PST
ResourceLoadObserver and WebProcess should exist as long as the process is running, but the m_networkProcessConnection can be closed for a variety of reasons. If the ResourceLoadObserver is being asked to observe an operation in the WebProcess, we should attempt to reconnect to the NetworkProcess as we do for other message send cases.
Attachments
Patch
(4.60 KB, patch)
2019-02-26 15:36 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(4.60 KB, patch)
2019-02-26 15:51 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2019-02-26 15:31:18 PST
<
rdar://problem/47773409
>
Brent Fulgham
Comment 2
2019-02-26 15:36:09 PST
Created
attachment 363029
[details]
Patch
John Wilander
Comment 3
2019-02-26 15:42:19 PST
Comment on
attachment 363029
[details]
Patch Looks good to me. Nit: In your Changelog entry, "observing" should be "observes" to make the grammar work.
Brent Fulgham
Comment 4
2019-02-26 15:45:27 PST
(In reply to John Wilander from
comment #3
)
> Comment on
attachment 363029
[details]
> Patch > > Looks good to me. > > Nit: In your Changelog entry, "observing" should be "observes" to make the > grammar work.
Oh! Good catch. Thanks.
Brent Fulgham
Comment 5
2019-02-26 15:51:26 PST
Created
attachment 363030
[details]
Patch
WebKit Commit Bot
Comment 6
2019-02-27 16:57:42 PST
Comment on
attachment 363030
[details]
Patch Clearing flags on attachment: 363030 Committed
r242183
: <
https://trac.webkit.org/changeset/242183
>
WebKit Commit Bot
Comment 7
2019-02-27 16:57:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug